# pymultiworld

./: .gitignore  .markdownlint.json  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  gloo.patch  main.py  main2.py  multiworld.patch  patch_gen.sh  pyproject.toml  pytorch.patch
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: lint.yml  pypi_release.yml  stale.yml
docs/: pytorch_build.md  requirements.txt
docs/source/: conf.py  index.rst
examples/: README.md  leader_recv.py  leader_send.py  leader_threading_recv.py  master_send.py  master_threading_recv.py  multiworld_all_reduce.py  multiworld_asyncio.py  resnet_multiworld.py  single_world.py
examples/all_gather/: README.md  m8d.py
examples/all_reduce/: README.md  m8d.py
examples/broadcast/: README.md  m8d.py
examples/gather/: README.md  m8d.py
examples/reduce/: README.md  m8d.py
examples/resnet/: README.md  m8d.py
examples/scatter/: README.md  m8d.py
examples/send_recv/: README.md  m8d.py  single_world.py
multiworld/: __init__.py  __main__.py  communicator.py  manager.py  post_setup.py  threadsafe_async.py  version.py  watchdog.py  world_communicator.py  world_manager.py
multiworld/patch/: pytorch-v2.4.0.patch
patch/: pytorch-v2.1.1.patch  pytorch-v2.2.1-nccl.patch  pytorch-v2.2.1.patch
patch_files/: pytorch.patch
scripts/: patch_gen.sh
torch/distributed/: __init__.py  distributed_c10d.py
world_communication_manager/: world_communication_manager.py
world_manager/: README.md  world_manager.py
(+31 files in other folders)
